Commenting out runner for now

--- a/.drone.yml
+++ b/.drone.yml
@@ -8,27 +8,27 @@ platform:
   arch: amd64
 
 steps:
-  - name: deploy-runner
-    pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/kd:v1.16.0
-    commands:
-      - apk add -U curl git
-      - git fetch origin
-      - git reset --hard origin/$${BRANCH}
-      - git checkout $${BRANCH}
-      - bin/runner/run.sh
-    environment:
-      ACTION: deploy
-      BRANCH: main
-      KUBE_TOKEN_ACP_NOTPROD:
-        from_secret: kube_token_acp_notprod
-      KUBE_TOKEN_ACP_PROD:
-        from_secret: kube_token_acp_prod
-      KUBE_TOKEN_ACP_TEST:
-        from_secret: kube_token_acp_test
-    when:
-      event:
-        - promote
+  # - name: deploy-runner
+  #   pull: if-not-exists
+  #   image: quay.io/ukhomeofficedigital/kd:v1.16.0
+  #   commands:
+  #     - apk add -U curl git
+  #     - git fetch origin
+  #     - git reset --hard origin/$${BRANCH}
+  #     - git checkout $${BRANCH}
+  #     - bin/runner/run.sh
+  #   environment:
+  #     ACTION: deploy
+  #     BRANCH: main
+  #     KUBE_TOKEN_ACP_NOTPROD:
+  #       from_secret: kube_token_acp_notprod
+  #     KUBE_TOKEN_ACP_PROD:
+  #       from_secret: kube_token_acp_prod
+  #     KUBE_TOKEN_ACP_TEST:
+  #       from_secret: kube_token_acp_test
+  #   when:
+  #     event:
+  #       - promote
   - name: deploy-designer
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/kd:v1.16.0
