Correct secret for runner

--- a/.drone.yml
+++ b/.drone.yml
@@ -48,7 +48,7 @@ steps:
       BRANCH: main
       IMAGE_URL: 340268328991.dkr.ecr.eu-west-2.amazonaws.com/stp/forms-designer
       KUBE_TOKEN_ACP_NOTPROD:
-        from_secret: forms-designer-kube-token
+        from_secret: forms-runner-kube-token
       PREVIEW_MODE: true
       PREVIEW_URL: https://form-builder.dev.stp-notprod.homeoffice.gov.uk
       PUBLISH_URL: https://form-builder.dev.internal.stp-notprod.homeoffice.gov.uk
