--- a/.drone.yml
+++ b/.drone.yml
@@ -57,7 +57,7 @@ steps:
         - success
         - failure
     depends_on:
-      - deploy-designer
+      - deploy-runner
 
 ---
 kind: pipeline
