--- a/.drone.yml
+++ b/.drone.yml
@@ -43,16 +43,18 @@ steps:
       template: >
         {{#success build.status}}
           runner deployment successful. Good job.
-          Environment: {{DRONE_DEPLOY_TO}}
+          Environment: {{build.deployTo}}
           Author: {{build.author}}
           Link: {{build.link}}
         {{else}}
           runner deployment failed. Fix me please.
-          Environment: {{DRONE_DEPLOY_TO}}
+          Environment: {{build.deployTo}}
           Author: {{build.author}}
           Link: {{build.link}}
         {{/success}}
     when:
+      event:
+        - promote
       status:
         - success
         - failure
@@ -98,16 +100,18 @@ steps:
       template: >
         {{#success build.status}}
           designer deployment successful. Good job.
-          Environment: {{DRONE_DEPLOY_TO}}
+          Environment: {{build.deployTo}}
           Author: {{build.author}}
           Link: {{build.link}}
         {{else}}
           designer deployment failed. Fix me please.
-          Environment: {{DRONE_DEPLOY_TO}}
+          Environment: {{build.deployTo}}
           Author: {{build.author}}
           Link: {{build.link}}
         {{/success}}
     when:
+      event:
+        - promote
       status:
         - success
         - failure
