internal ingress name too long

--- a/kube/runner/ingress-app-internal.yaml
+++ b/kube/runner/ingress-app-internal.yaml
@@ -12,6 +12,7 @@ metadata:
 spec:
   tls:
     - hosts:
+        - runner{{ .INTERNAL_URL }}
         - {{ .NAME }}{{ .INTERNAL_URL }}
       secretName: {{ .NAME }}-internal
   rules:
