--- a/.drone.yml
+++ b/.drone.yml
@@ -136,5 +136,5 @@ steps:
       event:
         - promote
 depends_on:
-    - slack-notification-designer-deployed
-    - slack-notification-runner-deployed
+    - designer
+    - runner
