Changing liveness probe on runner

--- a/kube/runner/deployment-app.yaml
+++ b/kube/runner/deployment-app.yaml
@@ -25,7 +25,7 @@ spec:
           imagePullPolicy: Always
           livenessProbe:
             httpGet:
-              path: /
+              path: /health-check
               port: {{ .PORT }}
             initialDelaySeconds: 30
             periodSeconds: 30
