--- a/.drone.yml
+++ b/.drone.yml
@@ -135,7 +135,7 @@ steps:
       - git fetch --all --tags
       - export TAG=${DESIGNER_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)}
       - echo "TAG=$TAG"
-      - git checkout $TAG -b master
+      - git checkout tags/$TAG -b smoketests
       - cd ..
   - name: smoke-tests
     pull: if-not-exists
