--- a/.drone.yml
+++ b/.drone.yml
@@ -141,8 +141,8 @@ steps:
     pull: if-not-exists
     image: 340268328991.dkr.ecr.eu-west-2.amazonaws.com/acp/dind
     commands:
-      - echo ${DRONE_DEPLOY_TO}
-      - if ${DRONE_DEPLOY_TO}=='test' (export ST_ENV='dev') else (export ST_ENV='test')
+      - echo $${DRONE_DEPLOY_TO}
+      - if $${DRONE_DEPLOY_TO}=='test' (export ST_ENV='dev') else (export ST_ENV='test')
       - export APP_URL=https://designer.${ST_ENV}.stp-forms-notprod.homeoffice.gov.uk
       - echo ${APP_URL}
     depends_on:
@@ -156,6 +156,12 @@ steps:
       - yarn smoke-test-headless
     depends_on:
       - setup app url
+    when:
+      target:
+        - development
+        - test
+      event:
+        - promote
 depends_on:
   - designer
   - runner
