--- a/.drone.yml
+++ b/.drone.yml
@@ -170,8 +170,19 @@ steps:
         - test
       event:
         - promote
+  - name: check-selenium
+    pull: if-not-exists
+    image: bitnami/node:12
+    commands:
+      - echo 'checking if selenium service is up and running'
+      - curl http://selenium:4444/wd/hub/status
+    when:
+      branch:
+        - master
+      event:
+        - push
 services:
-  - selenium:
+  selenium:
     image: selenium/standalone-chrome
 depends_on:
   - designer
